@@ -2,6 +2,8 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
+	- Fix adding single instrument to watchlist
+
 0.12 2016-12-02T21:42:01Z
 
     - Update eg/buy.pl for minor API change
